add query and complaints

--- a/docs/email_templates/complainMail.ejs
+++ b/docs/email_templates/complainMail.ejs
@@ -38,11 +38,27 @@
     
    
     <p style="padding-left: 25px; padding-top: 10px;">
+        <% if (loanappid) { %>
         <p>Application Number : <span style="padding-left: 10px;"><%=loanappid%></span></p>
+        <% } %>
         <p>Full Name : <span style="padding-left: 10px;"><%=userName%></span></p>
         <p>Email Address: <span style="padding-left: 10px;"><%=email%></span></p>
         <p>Contact Number : <span style="padding-left: 10px;"><%=phone%></span></p>
+        <% if (address) { %>
+            <p>Address : <span style="padding-left: 10px;"><%=address%></span></p>
+            <% } %>
+            
+            <% if (state) { %>
+                <p>State : <span style="padding-left: 10px;"><%=state%></span></p>
+                <% } %>
+                
+                <% if (pin) { %>
+                    <p>Pin Code : <span style="padding-left: 10px;"><%=pin%></span></p>
+                    <% } %>        
+        
+        <% if (concern) { %>
         <p>Concern : <span style="padding-left: 10px;"><%=concern%></span></p>
+        <% } %>
     </p>
 </body>
 </html>
