make all pagination doen

--- a/docs/email_templates/complainMailCustomer.ejs
+++ b/docs/email_templates/complainMailCustomer.ejs
@@ -38,9 +38,9 @@
     
    
     <p style="padding-left: 25px; padding-top: 10px;">
-        <!-- <% if (loanappid) { %>
+        <% if (loanappid) { %>
         <p>Application Number : <span style="padding-left: 10px;"><%=loanappid%></span></p>
-        <% } %> -->
+        <% } %>
         <p>Full Name : <span style="padding-left: 10px;"><%=userName%></span></p>
         <p>Email Address: <span style="padding-left: 10px;"><%=email%></span></p>
         <p>Contact Number : <span style="padding-left: 10px;"><%=phone%></span></p>
